package dataControllerUtils.protobuf;

import "dataControllerUtils/Domain.proto";


message DomainResponse {
extensions 14 to 107;
  optional string id = 1;
  repeated Domain domains= 2;
}
